# PodushkaApplication

./: CMakeLists.txt  main.cpp
data/: notes.json
src/core/: storageManager.cpp  storageManager.h
src/modules/games/: gameSudoku.cpp  gameSudoku.h
src/modules/music/: musicManager.cpp  musicManager.h  playlistManager.cpp  playlistManager.h
src/modules/notes/: notesManager.cpp  notesManager.h
src/modules/pet/: petLogic.cpp  petLogic.h
src/modules/terminal/: terminalLogic.cpp  terminalLogic.h
src/ui/: buttonWidget.cpp  buttonWidget.h  headerWidget.cpp  headerWidget.h  mainWindow.cpp  mainWindow.h  windowLightWidget.cpp  windowLightWidget.h
